--- a/source/sites/all/themes/custom/sass/pages.scss
+++ b/source/sites/all/themes/custom/sass/pages.scss
@@ -981,6 +981,12 @@ span.field-label {
   }
 }
 
+.page-node-65 {
+  .services-description {
+    padding: 90px 30%;
+  }
+}
+
 /** Media Querys  **/
 
 /* Large desktop */
